[project]
name = "sudokusolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "drawsvg>=2.4.0",
    "numpy>=2.1.2",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.9.2",
    "qrcode>=8.0",
    "scipy>=1.14.1",
    "streamlit>=1.39.0",
    "watchdog>=5.0.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
